Experimental implementation of an async buffer for page rendering output